# hosting

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  config.toml  docker-compose.prod.yaml  docker-compose.yaml  example.env  lint_requirements.txt  main.py  mypy.ini  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 04b41bd9ddbd_.py  05ac58049d31_.py  0a1e912ce8f2_.py  125e16b35258_.py  15e4f4da2045_.py  1b45adb9895a_.py  23d8309fce4b_.py  274de093abb7_.py  2791b87a1a5b_.py  2e5745324ef7_.py  3bb322d9f5ca_.py  3be945230553_.py  4d541234f80c_.py  4e6cece77a7a_.py  515a49d0b71f_.py  5d5180d011de_.py  611c57d3e0ad_.py  674a14b69c96_.py  6a726976c60f_.py  6f574c0d7737_.py  7187a1b565a3_.py  72c0e4dbe1c3_.py  735d1d3bcaea_.py  936e8c1c0a55_.py  a4c6c3fc95ec_.py  a7687c33fd19_.py  b0e3211650e3_.py  b120f8f5fd3b_.py  b15878f5e3de_.py  c51ea7c3f942_.py  cde334130395_.py  d4277a906800_.py  d652328b8b5f_.py  d86fa18dac7c_.py  db7cd86247e9_.py  eb57bb35b246_.py  fa469d7e4b04_.py  fb41efa3d98f_.py  ff14d4f8fc70_.py
app/: models.py  settings.py  views.py
auth/: auth.py  database.py  hashed.py  scheme.py  services.py  test_auth.py  token.py  user.py
chat/: services.py  test_chat.py  views.py
core/: models.py  schemas.py  services.py  test_core.py  views.py
deploy/nginx/: Dockerfile  host.conf
deploy/python/: Dockerfile
templates/: index.html
