[tool.poetry]
name = "hosting"
version = "0.1.0"
description = ""
authors = ["Korneeva_006 <varvara_korneeva@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.75.2"
uvicorn = "0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
